--- a/Team/src/main/resources/application.properties
+++ b/Team/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.application.name=Team-players
-server.port=9999
+spring.application.name=team-service
 spring.config.import=optional:configserver:
-football-players.ribbon.listOfServers=http://localhost:8888
-#football-players.ribbon.listOfServers=http://localhost:8888,http://localhost:8484,http://localhost:8585
+server.port=9999
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
+#football-players.ribbon.listOfServers=http://localhost:8888
+#football-players.ribbon.listOfServers=http://localhost:8888,http://localhost:8484,http://localhost:8585,http://localhost:8686
