--- a/football/src/main/resources/application.properties
+++ b/football/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=football-players
+spring.config.import=optional:configserver:
 server.port=8888
 #server.port=8484
 #server.port=8585
-spring.config.import=optional:configserver:
+#server.port=8686
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/football?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
